# sede

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-curl.yml
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/sede/: __init__.py  __main__.py  cli.py  discovery.py  models.py
tests/: test_cli.py  test_cli_integration.py  test_discovery_integration.py  test_discovery_unit.py
