[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sede"
version = "0.1.0"
description = "Session deleter for coding assistants"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.12,<1.0", "questionary>=2.0,<3.0", "rich>=13.7,<14.0"]

[project.scripts]
sede = "sede.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
