[build-system]
requires = ["setuptools>=69.0", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "sede"
version = "0.1.4"
description = "Session deleter for coding assistants"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "Ilya Popov", email = "ilypopv@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["typer>=0.12,<1.0", "questionary>=2.0,<3.0", "rich>=13.7,<14.0"]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9.0", "pytest-cov>=5.0,<6.0"]

[project.urls]
Homepage = "https://github.com/ilypopv/sede"
Repository = "https://github.com/ilypopv/sede"

[project.scripts]
sede = "sede.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --cov=src/sede --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["src/sede"]

[tool.coverage.report]
show_missing = true
skip_covered = false
